--- a/css/style.css
+++ b/css/style.css
@@ -1435,3 +1435,34 @@ p.loan-apply-con {
   line-height: 20px;
   margin-bottom: 18px;
 }
+.text-center {
+  text-align: center;
+}
+.text-left {
+  text-align: left;
+}
+.col-border {
+  border-right: 1px solid #cccccc;
+}
+.tz_tab tr.ft12 td {
+  font-size: 12px;
+}
+.rank {
+  position: relative;
+  color: #fff;
+  z-index: 1;
+}
+.rank::before {
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  background: #fdb82c;
+  border-radius: 16px;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  content: ' ';
+  z-index: -1;
+}
