--- a/css/style.css
+++ b/css/style.css
@@ -1466,6 +1466,77 @@ p.loan-apply-con {
   content: ' ';
   z-index: -1;
 }
+ul.nav li {
+  display: inline-block;
+  position: relative;
+  z-index: 9999;
+  font-size: 18px;
+  cursor: pointer;
+}
+ul.nav li a {
+  float: none;
+}
+ul.nav li ul {
+  display: none;
+  position: absolute;
+  left: -30px;
+  right: -30px;
+  top: 36px;
+  padding: 12px;
+  background: #fff;
+  border: 1px solid #cccccc;
+  width: auto;
+  text-align: center;
+}
+ul.nav li ul::before {
+  content: ' ';
+  position: absolute;
+  left: 50%;
+  top: 0;
+  border-left: 1px solid #cccccc;
+  border-top: 1px solid #cccccc;
+  background: #fff;
+  -webkit-transform: rotate(45deg) translate(-50%, -50%);
+      -ms-transform: rotate(45deg) translate(-50%, -50%);
+          transform: rotate(45deg) translate(-50%, -50%);
+  width: 8px;
+  height: 8px;
+}
+ul.nav li ul a {
+  padding: 0;
+  font-size: 14px;
+  display: block;
+}
+ul.nav li ul a:hover {
+  background: #fdb82c;
+  color: #fff;
+}
+ul.nav li ul li {
+  display: block;
+}
+ul.nav li:hover > a {
+  color: #fdb82c;
+}
+ul.nav li:hover ul {
+  display: block;
+}
+ul.nav li:hover::after {
+  border-color: #fdb82c;
+}
+ul.nav .sub {
+  padding-right: 3px;
+}
+ul.nav .sub::after {
+  content: ' ';
+  position: absolute;
+  right: 7px;
+  top: 18px;
+  width: 0;
+  height: 0;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-top: 4px solid #555;
+}
 .ui-progressbar-mid {
   margin: 6px auto;
   display: block;
