--- a/css/style.less
+++ b/css/style.less
@@ -101,6 +101,94 @@
 	}
 }
 
+// ----------------------------------------
+// ! navigation
+// ----------------------------------------
+ul.nav {
+	li {
+		display: inline-block;
+		position: relative;
+		z-index: 9999;
+		font-size: 18px;
+		cursor: pointer;
+
+		a {
+			float: none;
+		}
+
+		ul {
+			display: none;
+			position: absolute;
+			left: -30px;
+			right: -30px;
+			top: 36px;
+			padding: 12px;
+			background: #fff;
+			border: 1px solid @c-border;
+			width: auto;
+			text-align: center;
+
+			&::before {
+				content: ' ';
+				position: absolute;
+				left: 50%;
+				top: 0;
+				border-left: 1px solid @c-border;
+				border-top: 1px solid @c-border;
+				background: #fff;
+				transform: rotate(45deg) translate(-50%, -50%);
+				width: 8px;
+				height: 8px;
+			}
+
+			a {
+				padding: 0;
+				font-size: 14px;
+				display: block;
+
+				&:hover {
+					background: @c-bg-y;
+					color: #fff;
+				}
+			}
+
+			li {
+				display: block;
+			}
+		}
+
+		&:hover {
+			>a {
+				color: @c-bg-y;
+			}
+
+			ul {
+				display: block;
+			}
+
+			&::after {
+				border-color: @c-bg-y;
+			}
+		}
+	}
+
+	.sub {
+		padding-right: 3px;
+
+		&::after {
+			content: ' ';
+			position: absolute;
+			right: 7px;
+			top: 18px;
+			width: 0;
+			height: 0;
+			border-left: 4px solid transparent;
+			border-right: 4px solid transparent;
+			border-top: 4px solid #555;
+		}
+	}
+}
+
 .ui-progressbar-mid {
 	margin:6px auto;
     display: block;
