--- a/css/public.css
+++ b/css/public.css
@@ -208,3 +208,8 @@ i{ display:inline-block;}
 .i_wrong{ background-position:-20px 0;}
 .i_tixing{ background-position:-40px 0;}
 .i_xiazai{ width:9px; height:12px; background-position:-40px -20px; margin-top:-2px;*margin-top:0;vertical-align:middle;}
+
+
+
+
+.con{ width:1000px; }
