many many changes

--- a/css/public.css
+++ b/css/public.css
@@ -216,3 +216,7 @@ i{ display:inline-block;}
 
 .header { background: white; }
 html body { background: #f6f6f6; }
+
+.btn, .btn3 { background: #55c31f; }
+.btn span { background: #55c31f; }
+.more, .more span { background: #55c31f; }
