--- a/css/public.css
+++ b/css/public.css
@@ -220,3 +220,4 @@ html body { background: #f6f6f6; }
 .btn, .btn3 { background: #55c31f; }
 .btn span { background: #55c31f; }
 .more, .more span { background: #55c31f; }
+.btn2 { background: #ffb900; }
