--- a/css/public.css
+++ b/css/public.css
@@ -221,3 +221,4 @@ html body { background: #f6f6f6; }
 .btn span { background: #55c31f; }
 .more, .more span { background: #55c31f; }
 .btn2 { background: #ffb900; }
+.pop_tit { background: #ffb900; }
