--- a/css/style.less
+++ b/css/style.less
@@ -70,6 +70,10 @@
 	text-align: center;
 }
 
+label {
+	cursor: pointer;
+}
+
 .text-left {
 	text-align: left;
 }
@@ -607,3 +611,100 @@ ul.nav {
 .ui-progressbar-mid-100 {
     background-position: -5400px 0
 }
+
+/* mansy's work */
+
+div.about-con p {
+  text-indent: 2em;
+}
+
+#right {
+  width: 780px;
+  float: right;
+  background: white;
+}
+.title span {
+  float: left;
+  border-bottom: 2px solid #ffb900;
+}
+.step2 i {
+  background:url(../images/i-step2.png);
+  color: #555;
+}
+html body div.con {
+ /* background: #f7f7f7;*/
+  padding: 15px 50px;
+}
+body#index-body {
+  background: #fff;
+}
+.tz_tab td.xmm {
+  padding-left: 0;
+}
+.shaixuan {
+  background: #fff;
+}
+body#index-body div.con {
+  padding: 0;
+  width: 1100px;
+  background: #fff;
+}
+.loan-item {
+  width: 32%;
+  margin-right: 11px;
+  overflow: hidden;
+  border-radius: 5px;
+  background: white;
+}
+.loan-item-inner {
+    padding: 5px 20px;
+}
+.loan-item h2 {
+  padding: 10px 20px;
+}
+.loan-item h2 {
+  color: white;
+  width: 100%;
+}
+.bg-blue {
+  background: #81b0c5;
+}
+.bg-green {
+  background: #3ea96b;
+}
+.bg-yellow {
+  background: #bb9738;
+}
+.bg-white {
+  background: white;
+}
+
+.loan-table {
+  border-collapse: collapse;
+  border: none;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+.rank::before {
+  background: #55c31f;
+}
+#left {
+  background: #f0f0f0;
+}
+.transfer-list {
+  background: white;
+  padding: 10px 30px 0 30px;
+}
+.tradetab li.act a {
+  color: #ffb900;
+}
+.tradetab li.act {
+  border-bottom: 2px solid #ffb900
+}
+.sxdl2 dd a.on { background-color: #21aeef; }
+.query_qzsj i { background: url(../images/calendar.png); }
+.left_ul li i { background: url(../images/r-arrow.png); }
+.i_sf { background: url(../images/namecard.png); }
+.jindu2 span { background-color: #55c31f; }
+.right_con h4 { color: #ffb900; }
+.log_sel { height: 400px; }
