--- a/css/public.css
+++ b/css/public.css
@@ -60,6 +60,8 @@ h1,h2,h3,h4{ font-weight:normal;}
 .mt10{ margin-top:10px;}
 .mt20{ margin-top:20px;}
 .mt30{ margin-top:30px;}
+.mt40{ margin-top:40px;}
+.mt50{ margin-top:50px;}
 .mb5{ margin-bottom:5px;}
 .mb10{ margin-bottom:10px;}
 .mb20{ margin-bottom:20px;}
