--- a/css/style.less
+++ b/css/style.less
@@ -25,6 +25,25 @@ input[type="submit"].btn {
   line-height: auto;
 }
 
+.max100 {
+  max-width: 100%;
+}
+
+.lhn {
+  * {
+    line-height: 1.5em;
+  }
+
+  td {
+    line-height: 1.5em !important;
+    padding: 12px 3px;
+  }
+
+  th {
+    line-height: 3em;
+  }
+}
+
 /* col */
 .col-3, .col-7 {
 	float: left;
@@ -111,6 +130,17 @@ label {
 		content: ' ';
 		z-index: -1;
 	}
+}
+
+.state .on {
+    color: #fff;
+    border-radius: 20px;
+    background-color: #21aeef;
+    padding: 0 12px;
+}
+.state a {
+  display: inline-block;
+  margin-right: 24px;
 }
 
 .hidden {
