--- a/css/style.css
+++ b/css/style.css
@@ -1392,12 +1392,20 @@ p.loan-apply-con {
   display: table;
   clear: both;
 }
-input[type="submit"].btn {
+input[type="submit"].btn,
+input[type="button"].btn {
   border: none;
-  padding: 0 16px 2px;
+  height: 24px;
+  line-height: 24px;
   color: #fff;
   height: auto;
+  width: 69px;
+  text-align: center;
   line-height: auto;
+}
+input[type="submit"].btn.big,
+input[type="button"].btn.big {
+  width: 100px;
 }
 .max100 {
   max-width: 100%;
@@ -1435,6 +1443,19 @@ input[type="submit"].btn {
 .transfer-list {
   width: 938px;
 }
+.transfer-list .row {
+  margin-left: 0;
+  margin-right: 0;
+}
+.transfer-list .col-xs-4 {
+  width: 277px;
+}
+.transfer-list .col-xs-8 {
+  width: 601px;
+}
+.transfer-list .col-xs-8 .col-xs-4 {
+  width: 169px;
+}
 .col-7 .sxdl dd {
   width: auto;
 }
@@ -1464,22 +1485,23 @@ label {
 }
 .rank {
   position: relative;
+  display: block;
   color: #fff;
   z-index: 1;
-}
-.rank::before {
-  position: absolute;
   width: 32px;
   height: 32px;
-  background: #fdb82c;
-  border-radius: 16px;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  content: ' ';
-  z-index: -1;
+  text-align: center;
+  line-height: 32px;
+  margin: 0 auto;
+}
+.rank-green {
+  background: url(../images/rank-green.png) no-repeat;
+}
+.rank-yellow {
+  background: url(../images/rank-yellow.png) no-repeat;
+}
+.rank-red {
+  background: url(../images/rank-red.png) no-repeat;
 }
 .state .on {
   color: #fff;
@@ -1491,8 +1513,98 @@ label {
   display: inline-block;
   margin-right: 24px;
 }
+.state,
+.ur-amount-info,
+.ur-invest-info {
+  margin-left: 0;
+  margin-right: 0;
+}
+.state .row,
+.ur-amount-info .row,
+.ur-invest-info .row {
+  margin-left: 0;
+  margin-right: 0;
+}
+.state .col-xs-2,
+.ur-amount-info .col-xs-2,
+.ur-invest-info .col-xs-2,
+.state .col-xs-3,
+.ur-amount-info .col-xs-3,
+.ur-invest-info .col-xs-3,
+.state .col-xs-4,
+.ur-amount-info .col-xs-4,
+.ur-invest-info .col-xs-4,
+.state .col-xs-6,
+.ur-amount-info .col-xs-6,
+.ur-invest-info .col-xs-6,
+.state .col-xs-9,
+.ur-amount-info .col-xs-9,
+.ur-invest-info .col-xs-9,
+.state .col-xs-10,
+.ur-amount-info .col-xs-10,
+.ur-invest-info .col-xs-10 {
+  padding: 0;
+}
+.row {
+  margin-left: 0;
+  margin-right: 0;
+}
+.row .col-xs-1,
+.row .col-xs-2,
+.row .col-xs-3,
+.row .col-xs-4,
+.row .col-xs-5,
+.row .col-xs-6,
+.row .col-xs-8,
+.row .col-xs-9,
+.row .col-xs-10,
+.row .col-xs-11,
+.row .col-xs-12 {
+  padding: 0;
+}
+.row .col-border {
+  margin-right: -1px;
+}
 .hidden {
   display: none;
+}
+.gonggao {
+  border: 1px solid #cccccc;
+  border-left: none;
+  border-right: none;
+  padding: 12px 0;
+  float: none;
+  width: auto;
+}
+.gonggao ul,
+.gonggao li {
+  width: 1100px;
+}
+.gonggao li {
+  position: relative;
+}
+.gonggao .time {
+  position: absolute;
+  right: 250px;
+  color: #ccc;
+}
+.gonggao .more {
+  position: absolute;
+  right: 0;
+  width: 100px;
+  background: none;
+  text-align: right;
+}
+.gonggao .more a {
+  color: #888;
+  float: none;
+  border: 1px solid #888;
+  border-radius: 12px;
+  padding: 0 12px;
+  line-height: 28px;
+}
+.gonggao .more a:hover {
+  color: #ccc;
 }
 .file-upload {
   display: block;
@@ -1562,8 +1674,6 @@ label {
   width: 100%;
   top: 0;
   left: 0;
-  opacity: 0;
-  filter: alpha(opacity=0);
 }
 .file-upload .file-select.file-select-disabled {
   opacity: 0.65;
@@ -1595,6 +1705,27 @@ label {
   display: inline-block;
   padding: 0 10px;
 }
+.file-upload .file-select {
+  position: relative;
+}
+.file-upload .file-select .file-select-name {
+  display: none;
+}
+.file-upload .file-select .file-select-button,
+.file-upload .file-select input[type="file"] {
+  position: absolute;
+}
+.file-upload .file-select .file-select-button {
+  left: 0;
+  width: 100px;
+}
+.file-upload .file-select input[type="file"] {
+  left: 140px;
+  display: block;
+  top: 12px;
+  width: auto;
+  height: auto;
+}
 ul.nav li {
   float: left;
   position: relative;
@@ -1605,64 +1736,75 @@ ul.nav li {
 ul.nav li a {
   float: none;
 }
+ul.nav li:hover > a {
+  color: #fdb82c;
+}
 ul.nav li ul {
   display: none;
   position: absolute;
-  left: -30px;
-  right: -30px;
+  left: 0;
+  width: 120px;
   top: 36px;
   padding: 12px;
   background: #fff;
   border: 1px solid #cccccc;
-  width: auto;
   text-align: center;
+}
+ul.nav li ul li {
+  float: none;
+  position: relative;
+  z-index: 0;
+  font-size: 14px;
+  line-height: 20px;
+  height: 20px;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  border: none;
+  outline: none;
+  width: 120px;
+}
+ul.nav li ul li a {
+  padding: 0;
+  font-size: 14px;
+  display: block;
+  line-height: 20px;
+  margin: 0;
+  border: none;
+  outline: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 120px;
+}
+ul.nav li ul li a:hover {
+  background: #fdb82c;
+  color: #fff;
 }
 ul.nav li ul .sub-nav-icon {
   position: absolute;
   top: -5px;
-  left: 45%;
+  left: 68px;
+  margin: 0;
+  text-align: left;
 }
 ul.nav li ul .sub-nav-icon span {
   display: block;
-  background: url(../images/nav-sub-nav-icon-2.png);
+  background: url(../images/nav-sub-nav-icon-2.png) no-repeat;
   width: 9px;
   height: 5px;
-}
-ul.nav li ul a {
-  padding: 0;
-  font-size: 14px;
-  display: block;
-}
-ul.nav li ul a:hover {
-  background: #fdb82c;
-  color: #fff;
-}
-ul.nav li ul li {
-  display: block;
-  float: none;
-}
-ul.nav li:hover > a {
-  color: #fdb82c;
-}
-ul.nav li:hover ul {
-  display: block;
-}
-ul.nav li:hover::after {
-  border-color: #fdb82c;
 }
 ul.nav .sub {
   padding-right: 3px;
 }
 .sub-icon {
+  background: url(../images/sub-icon.png) no-repeat;
   display: block;
   position: absolute;
-  width: 0;
-  height: 0;
+  width: 8px;
+  height: 4px;
   top: 18px;
   right: 7px;
-  border-left: 4px solid transparent;
-  border-right: 4px solid transparent;
-  border-top: 4px solid #555;
 }
 .ui-progressbar-mid {
   margin: 6px auto;
@@ -1673,6 +1815,10 @@ ul.nav .sub {
   font-size: 8px;
   text-align: center;
   background: url(../images/progressbar.png);
+}
+.tongji dl dt {
+  width: 124px;
+  height: 124px;
 }
 .ui-progressbar-mid em {
   font-size: 14px;
@@ -2070,13 +2216,13 @@ body#index-body div.con {
   background-color: #21aeef;
 }
 .query_qzsj i {
-  background: url(../images/calendar.png);
+  background: url(../images/calendar.png) no-repeat;
 }
 .left_ul li i {
-  background: url(../images/r-arrow.png);
+  background: url(../images/r-arrow.png) no-repeat;
 }
 .i_sf {
-  background: url(../images/namecard.png);
+  background: url(../images/namecard.png) no-repeat;
 }
 .jindu2 span {
   background-color: #55c31f;
