--- a/css/style.less
+++ b/css/style.less
@@ -4,127 +4,166 @@
 @c-bg-y: #FDB82C;
 
 .row * {
-	//box-sizing: border-box;
+    //box-sizing: border-box;
 }
 
 .row {
-	&::before, &::after {
-		content: ' ';
-		display: table;
-		clear: both;
-		//box-sizing: border-box;
-	}
+    &::before, &::after {
+        content: ' ';
+        display: table;
+        clear: both;
+        //box-sizing: border-box;
+    }
 }
 
-input[type="submit"].btn {
-  border: none;
-  padding: 0 16px 2px;
-  color: #fff;
-  height: auto;
-  line-height: auto;
+input[type="submit"].btn, input[type="button"].btn {
+    border: none;
+    height: 24px;
+    line-height: 24px;
+    color: #fff;
+    height: auto;
+    width: 69px;
+    text-align: center;
+    line-height: auto;
+
+    &.big {
+        width: 100px;
+    }
 }
 
 .max100 {
-  max-width: 100%;
+    max-width: 100%;
 }
 
 .lhn {
-  * {
-    line-height: 1.5em;
-  }
+    * {
+        line-height: 1.5em;
+    }
 
-  td {
-    line-height: 1.5em !important;
-    padding: 12px 3px;
-  }
+    td {
+        line-height: 1.5em !important;
+        padding: 12px 3px;
+    }
 
-  th {
-    line-height: 3em;
-  }
+    th {
+        line-height: 3em;
+    }
 }
 
 /* col */
 .col-3, .col-7 {
-	float: left;
-	//box-sizing: border-box;
+    float: left;
+    //box-sizing: border-box;
 }
 
 .clear-col {
-	clear: both;
+    clear: both;
 }
 
 .shaixuan .col-7 {
-	border-right: 1px solid #ddd; 
+    border-right: 1px solid #ddd; 
 }
 
 .shaixuan .col-3 {
-	padding: 0 30px;
+    padding: 0 30px;
 }
 
 .col-7 {
-  width: 658px;
+    width: 658px;
 }
 
 .col-3 {
-  width: 219px;
+    width: 219px;
 }
 
+@col-padding: 30px;
 .transfer-list {
-  width: 938px;
+    width: 938px;
+
+    .row {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .col-xs-4 {
+        width: 322px - @col-padding * 1.5;
+    }
+
+    .col-xs-8 {
+        width: 646px - @col-padding * 1.5;
+
+        .col-xs-4 {
+            width: 169px;
+        }
+    }
 }
 
 .col-7 .sxdl dd {
-  width: auto;
+    width: auto;
 }
 
 .shaixuan .col-3 a {
-	display: block;
-	line-height: 20px;
+    display: block;
+    line-height: 20px;
 }
 
 .shaixuan .col-3 h2 {
-	font-size: 18px;
-	line-height: 20px;
-	margin-bottom: 18px;
+    font-size: 18px;
+    line-height: 20px;
+    margin-bottom: 18px;
 }
 
 .text-center {
-	text-align: center;
+    text-align: center;
 }
 
 label {
-	cursor: pointer;
+    cursor: pointer;
 }
 
 .text-left {
-	text-align: left;
+    text-align: left;
 }
 
 .col-border {
-	border-right: 1px solid @c-border;
+    border-right: 1px solid @c-border;
 }
 
 .tz_tab tr.ft12 td{
-	font-size: 12px;
+    font-size: 12px;
 }
 
 .rank {
-	position: relative;
-	color: #fff;
-	z-index: 1;
+    position: relative;
+    display: block;
+    color: #fff;
+    z-index: 1;
+    width: 32px;
+    height: 32px;
+    text-align: center;
+    line-height: 32px;
+    margin: 0 auto;
 
-	&::before {
-		position: absolute;
-		width: 32px;
-		height: 32px;
-		background: @c-bg-y;
-		border-radius: 16px;
-		left: 50%;
-		top: 50%;
-		transform: translate(-50%, -50%);
-		content: ' ';
-		z-index: -1;
-	}
+    // &::before {
+    // 	position: absolute;
+    // 	width: 32px;
+    // 	height: 32px;
+    // 	background: @c-bg-y;
+    // 	border-radius: 16px;
+    // 	left: 50%;
+    // 	top: 50%;
+    // 	transform: translate(-50%, -50%);
+    // 	content: ' ';
+    // 	z-index: -1;
+    // }
+}
+
+.rank-green {
+    background: url(../images/rank-green.png) no-repeat;
+}.rank-yellow {
+    background: url(../images/rank-yellow.png) no-repeat;
+}.rank-red {
+    background: url(../images/rank-red.png) no-repeat;
 }
 
 .state .on {
@@ -134,14 +173,83 @@ label {
     padding: 0 12px;
 }
 .state a {
-  display: inline-block;
-  margin-right: 24px;
+    display: inline-block;
+    margin-right: 24px;
 }
+
+.state, .ur-amount-info, .ur-invest-info {
+    margin-left: 0;
+    margin-right: 0;
+
+    .row {
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-6, .col-xs-9, .col-xs-10 {
+        padding: 0;
+    }
+}
+
+.row {
+    margin-left: 0;
+    margin-right: 0;
+
+    .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
+        padding: 0;
+    }
+
+    .col-border {
+        margin-right: -1px;
+    }
+} 
 
 .hidden {
-  display: none;
+    display: none;
 }
 
+.gonggao {
+    border: 1px solid @c-border;
+    border-left: none;
+    border-right: none;
+    padding: 12px 0;
+    float: none;
+    width: auto;
+
+    ul, li {
+        width: 1100px;
+    }
+
+    li {
+        position: relative;
+    }
+
+    .time {
+        position: absolute;
+        right: 250px;
+        color: #ccc;
+    }
+
+    .more {
+        position: absolute;
+        right: 0;
+        width: 100px;
+        background: none;
+        text-align: right;
+
+        a {
+            color: #888;
+            float: none;
+            border: 1px solid #888;
+            border-radius: 12px;
+            padding: 0 12px;
+            line-height: 28px;
+
+            &:hover {
+                color: #ccc;
+            }
+        }
+    }
+}
 // ----------------------------------------
 // ! file select
 // ----------------------------------------
@@ -153,136 +261,179 @@ label {
 .file-upload .file-select:hover .file-select-button{background:#34495e;color:#FFFFFF;transition:all .2s ease-in-out;-moz-transition:all .2s ease-in-out;-webkit-transition:all .2s ease-in-out;-o-transition:all .2s ease-in-out;}
 .file-upload.active .file-select{border-color:#3fa46a;transition:all .2s ease-in-out;-moz-transition:all .2s ease-in-out;-webkit-transition:all .2s ease-in-out;-o-transition:all .2s ease-in-out;}
 .file-upload.active .file-select .file-select-button{background:#3fa46a;color:#FFFFFF;transition:all .2s ease-in-out;-moz-transition:all .2s ease-in-out;-webkit-transition:all .2s ease-in-out;-o-transition:all .2s ease-in-out;}
-.file-upload .file-select input[type=file]{z-index:100;cursor:pointer;position:absolute;height:100%;width:100%;top:0;left:0;opacity:0;filter:alpha(opacity=0);}
+.file-upload .file-select input[type=file]{z-index:100;cursor:pointer;position:absolute;height:100%;width:100%;top:0;left:0;}
 .file-upload .file-select.file-select-disabled{opacity:0.65;}
 .file-upload .file-select.file-select-disabled:hover{cursor:default;display:block;border: 2px solid #dce4ec;color: #34495e;cursor:pointer;height:40px;line-height:40px;margin-top:5px;text-align:left;background:#FFFFFF;overflow:hidden;position:relative;}
 .file-upload .file-select.file-select-disabled:hover .file-select-button{background:#dce4ec;color:#666666;padding:0 10px;display:inline-block;height:40px;line-height:40px;}
 .file-upload .file-select.file-select-disabled:hover .file-select-name{line-height:40px;display:inline-block;padding:0 10px;}
 
+
+.file-upload {
+    .file-select {
+        position: relative;
+
+        .file-select-name {
+            display: none;
+        }
+
+        .file-select-button, input[type="file"] {
+            position: absolute;
+        }
+
+        .file-select-button {
+            left: 0;
+            width: 100px;
+        }
+
+        input[type="file"] {
+            left: 140px;
+            display: block;
+            top: 12px;
+            width: auto;
+            height: auto;
+        }
+    }
+}
 // ----------------------------------------
 // ! navigation
 // ----------------------------------------
 ul.nav {
-	li {
-    float: left;
-		position: relative;
-		z-index: 9999;
-		font-size: 18px;
-		cursor: pointer;
+    li {
+        float: left;
+        position: relative;
+        z-index: 9999;
+        font-size: 18px;
+        cursor: pointer;
 
-		a {
-			float: none;
-		}
-
-		ul {
-			display: none;
-			position: absolute;
-			left: -30px;
-			right: -30px;
-			top: 36px;
-			padding: 12px;
-			background: #fff;
-			border: 1px solid @c-border;
-			width: auto;
-			text-align: center;
-
-      .sub-nav-icon {
-        position: absolute;
-        top: -5px;
-        left: 45%;
-
-        span {
-          display: block;
-          background: url(../images/nav-sub-nav-icon-2.png);
-          width: 9px;
-          height: 5px;
+        a {
+            float: none;
         }
-      }
 
-			&::before {
-				// content: ' ';
-				// position: absolute;
-				// left: 50%;
-				// top: 0;
-				// border-left: 1px solid @c-border;
-				// border-top: 1px solid @c-border;
-				// background: #fff;
-				// transform: rotate(45deg) translate(-50%, -50%);
-				// width: 8px;
-				// height: 8px;
-			}
+        &:hover {
+            >a {
+                color: @c-bg-y;
+            }
+        }
 
-			a {
-				padding: 0;
-				font-size: 14px;
-				display: block;
+        ul {
+            display: none;
+            position: absolute;
+            left: 0;
+            width: 120px;
+            top: 36px;
+            padding: 12px;
+            background: #fff;
+            border: 1px solid @c-border;
+            text-align: center;
 
-				&:hover {
-					background: @c-bg-y;
-					color: #fff;
-				}
-			}
+            li {
+                float: none;
+                position: relative;
+                z-index: 0;
+                font-size: 14px;
+                line-height: 20px;
+                height: 20px;
+                overflow: hidden;
+                margin: 0;
+                padding: 0;
+                border: none;
+                outline: none;
+                width: 120px;
 
-			li {
-				display: block;
-        float: none;
-			}
-		}
+                a {
+                    padding: 0;
+                    font-size: 14px;
+                    display: block;
+                    line-height: 20px;
+                    margin: 0;
+                    border: none;
+                    outline: none;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 120px;
 
-		&:hover {
-			>a {
-				color: @c-bg-y;
-			}
+                    &:hover {
+                        background: @c-bg-y;
+                        color: #fff;
+                    }
+                }
+            }
 
-			ul {
-				display: block;
-			}
+            .sub-nav-icon {
+                position: absolute;
+                top: -5px;
+                left: 68px;
+                margin: 0;
+                text-align: left;
 
-			&::after {
-				border-color: @c-bg-y;
-			}
-		}
-	}
+                span {
+                    display: block;
+                    background: url(../images/nav-sub-nav-icon-2.png) no-repeat;
+                    width: 9px;
+                    height: 5px;
+                }
+            }
 
-	.sub {
-		padding-right: 3px;
+            &::before {
+                // content: ' ';
+                // position: absolute;
+                // left: 50%;
+                // top: 0;
+                // border-left: 1px solid @c-border;
+                // border-top: 1px solid @c-border;
+                // background: #fff;
+                // transform: rotate(45deg) translate(-50%, -50%);
+                // width: 8px;
+                // height: 8px;
+            }
+        }
+    }
 
-		// &::after {
-		// 	content: ' ';
-		// 	position: absolute;
-		// 	right: 7px;
-		// 	top: 18px;
-		// 	width: 0;
-		// 	height: 0;
-		// 	border-left: 4px solid transparent;
-		// 	border-right: 4px solid transparent;
-		// 	border-top: 4px solid #555;
-		// }
-	}
+    .sub {
+        padding-right: 3px;
+
+        // &::after {
+        // 	content: ' ';
+        // 	position: absolute;
+        // 	right: 7px;
+        // 	top: 18px;
+        // 	width: 0;
+        // 	height: 0;
+        // 	border-left: 4px solid transparent;
+        // 	border-right: 4px solid transparent;
+        // 	border-top: 4px solid #555;
+        // }
+    }
 }
 
 .sub-icon {
-  //background: url(../images/sub-icon.png);
-  display: block;
-  position: absolute;
-  width: 0;
-  height: 0;
-  top: 18px;
-  right: 7px;
-  border-left: 4px solid transparent;
-  border-right: 4px solid transparent;
-  border-top: 4px solid #555;
+    background: url(../images/sub-icon.png) no-repeat;
+    display: block;
+    position: absolute;
+    width: 8px;
+    height: 4px;
+    top: 18px;
+    right: 7px;
+    // border-left: 4px solid transparent;
+    // border-right: 4px solid transparent;
+    // border-top: 4px solid #555;
 }
 
 .ui-progressbar-mid {
-	margin:6px auto;
+    margin:6px auto;
     display: block;
     width: 44px;
     height: 44px;
     line-height: 44px;
     font-size: 8px;
     text-align: center;
-    background: url(../images/progressbar.png)
+    background: url(../images/progressbar.png);
+}
+
+.tongji dl dt {
+  width: 124px;
+  height: 124px;
 }
 
 .ui-progressbar-mid em {
@@ -696,96 +847,96 @@ ul.nav {
 /* mansy's work */
 
 div.about-con p {
-  text-indent: 2em;
+    text-indent: 2em;
 }
 
 #right {
-  width: 780px;
-  float: right;
-  background: white;
+    width: 780px;
+    float: right;
+    background: white;
 }
 .title span {
-  float: left;
-  border-bottom: 2px solid #ffb900;
+    float: left;
+    border-bottom: 2px solid #ffb900;
 }
 .step2 i {
-  background:url(../images/i-step2.png);
-  color: #555;
+    background:url(../images/i-step2.png);
+    color: #555;
 }
 html body div.con {
- /* background: #f7f7f7;*/
-  padding: 15px 50px;
+    /* background: #f7f7f7;*/
+    padding: 15px 50px;
 }
 body#index-body {
-  background: #fff;
+    background: #fff;
 }
 .tz_tab td.xmm {
-  padding-left: 0;
+    padding-left: 0;
 }
 .shaixuan {
-  background: #fff;
+    background: #fff;
 }
 body#index-body div.con {
-  padding: 0;
-  width: 1100px;
-  background: #fff;
+    padding: 0;
+    width: 1100px;
+    background: #fff;
 }
 .loan-item {
-  width: 32%;
-  margin-right: 11px;
-  overflow: hidden;
-  border-radius: 5px;
-  background: white;
+    width: 32%;
+    margin-right: 11px;
+    overflow: hidden;
+    border-radius: 5px;
+    background: white;
 }
 .loan-item-inner {
     padding: 5px 20px;
 }
 .loan-item h2 {
-  padding: 10px 20px;
+    padding: 10px 20px;
 }
 .loan-item h2 {
-  color: white;
-  width: 100%;
+    color: white;
+    width: 100%;
 }
 .bg-blue {
-  background: #81b0c5;
+    background: #81b0c5;
 }
 .bg-green {
-  background: #3ea96b;
+    background: #3ea96b;
 }
 .bg-yellow {
-  background: #bb9738;
+    background: #bb9738;
 }
 .bg-white {
-  background: white;
+    background: white;
 }
 
 .loan-table {
-  border-collapse: collapse;
-  border: none;
-  font-size: 14px;
-  margin-bottom: 10px;
+    border-collapse: collapse;
+    border: none;
+    font-size: 14px;
+    margin-bottom: 10px;
 }
 .rank::before {
-  background: #55c31f;
+    background: #55c31f;
 }
 #left {
-  background: #f0f0f0;
+    background: #f0f0f0;
 }
 .transfer-list {
-  background: white;
-  padding: 10px 30px 0 30px;
+    background: white;
+    padding: 10px 30px 0 30px;
 }
 .tradetab li.act a {
-  color: #ffb900;
+    color: #ffb900;
 }
 .tradetab li.act {
-  border-bottom: 2px solid #ffb900
+    border-bottom: 2px solid #ffb900
 }
 .sxdl2 dd a.on { background-color: #21aeef; }
-.query_qzsj i { background: url(../images/calendar.png); }
-.left_ul li i { background: url(../images/r-arrow.png); }
-.i_sf { background: url(../images/namecard.png); }
+.query_qzsj i { background: url(../images/calendar.png) no-repeat; }
+.left_ul li i { background: url(../images/r-arrow.png) no-repeat; }
+.i_sf { background: url(../images/namecard.png) no-repeat; }
 .jindu2 span { background-color: #55c31f; }
 .right_con h4 { color: #ffb900; }
 .log_sel { height: 400px; }
@@ -793,51 +944,51 @@ body#index-body div.con {
 
 // style of page security 
 .security-con {
-  background: white;
+    background: white;
 }
 .security-con p {
-  text-indent: 2em;
+    text-indent: 2em;
 }
 .security-con h2.security-title-1, .security-con h2.security-title-2, .security-con h2.security-title-3, .security-con h2.security-title-4 {
-  position: relative;
-  height: 66px;    
-  left: -66px;
+    position: relative;
+    height: 66px;    
+    left: -66px;
 }
 .security-con h2.security-title-1 span, .security-con h2.security-title-2 span, .security-con h2.security-title-3 span, .security-con h2.security-title-4 span {
-  margin-top: 18px;
-  display: inline-block;
-  color: white;
+    margin-top: 18px;
+    display: inline-block;
+    color: white;
 }
 .security-con h2.security-title-1 {
-  background: url(../images/security-titlebg-1.png) no-repeat scroll left 0;
+    background: url(../images/security-titlebg-1.png) no-repeat scroll left 0;
 }
 .security-con h2.security-title-1 span {
-  padding: 0 50px 0 40px;    
-  background: #1bb8e2;
+    padding: 0 50px 0 40px;    
+    background: #1bb8e2;
 }
 .security-con h2.security-title-2 {
-  background: url(../images/security-titlebg-2.png) no-repeat scroll left 0;
+    background: url(../images/security-titlebg-2.png) no-repeat scroll left 0;
 }
 .security-con h2.security-title-2 span {
-  padding: 0 50px 0 40px;    
-  background: #83c614;
-  
+    padding: 0 50px 0 40px;    
+    background: #83c614;
+
 }
 .security-con h2.security-title-3 {
-  background: url(../images/security-titlebg-3.png) no-repeat scroll left 0;  
+    background: url(../images/security-titlebg-3.png) no-repeat scroll left 0;  
 }
 .security-con h2.security-title-3 span {
-  padding: 0 50px 0 40px;    
-  background: #ffc400;
+    padding: 0 50px 0 40px;    
+    background: #ffc400;
 }
 .security-con h2.security-title-4 {
-  background: url(../images/security-titlebg-4.png) no-repeat scroll left 0;  
+    background: url(../images/security-titlebg-4.png) no-repeat scroll left 0;  
 }
 .security-con h2.security-title-4 span {
-  padding: 0 50px 0 40px;    
-  background: #45b5a7;
+    padding: 0 50px 0 40px;    
+    background: #45b5a7;
 }
 .security-con div.security-content {
-  border-bottom: 1px dashed #aaa;
-  padding-bottom: 50px;
+    border-bottom: 1px dashed #aaa;
+    padding-bottom: 50px;
 }
