--- a/css/style.css
+++ b/css/style.css
@@ -1392,6 +1392,44 @@ p.loan-apply-con {
   display: table;
   clear: both;
 }
+img {
+  max-width: 100%;
+}
+.nbr {
+  border: none;
+}
+.nbr td {
+  border: none;
+}
+.result-img {
+  width: 150px;
+  height: 150px;
+  background-repeat: no-repeat;
+  background-size: 150px 150px;
+  display: block;
+  margin: 0 auto;
+}
+.state-success .result-img {
+  background-image: url(../images/success.png);
+}
+.state-success h3 {
+  font-size: 24px;
+  color: #59c130;
+}
+.state-fail .result-img {
+  background-image: url(../images/fail.png);
+}
+.state-fail h3 {
+  font-size: 24px;
+  color: #fdb82c;
+}
+.state-process .result-img {
+  background-image: url(../images/process.png);
+}
+.state-process h3 {
+  font-size: 24px;
+  color: #2eafec;
+}
 input[type="submit"].btn,
 input[type="button"].btn {
   border: none;
