--- a/css/style.less
+++ b/css/style.less
@@ -1095,3 +1095,22 @@ body#index-body div.con {
     border-bottom: 1px dashed #aaa;
     padding-bottom: 50px;
 }
+
+
+
+
+
+
+
+
+/* ZJL's style */
+.state .on {
+  color: #fff;
+  border-radius: 20px;
+  background-color: #21aeef;
+  padding: 0 12px;
+}
+.state a {
+  display: inline-block;
+  margin-right: 24px;
+}
