再次修改我要融资页面的标题颜色

--- a/css/public.css
+++ b/css/public.css
@@ -123,8 +123,8 @@ h1,h2,h3,h4{ font-weight:normal;}
 .blue { color: #21aeef; }
 .green { color: #55c31f; }
 .yellow { color: #ffb900;}
-.bg-blue { background-color: #23a4df; }
-.bg-green { background-color: #34bd1d; }
+.bg-blue { background-color: #4cb1df; }
+.bg-green { background-color: #72c648; }
 .bg-yellow { background-color: #ffb900;}
 
 /*表单*/
