--- a/css/style.less
+++ b/css/style.less
@@ -347,6 +347,31 @@ input[type="submit"].btn, input[type="button"].btn {
         }
     }
 }
+
+/* subMenu */
+
+.left_ul li i {
+    background: url(../images/arrow-close.png) no-repeat;
+    width: 10px;
+    height: 6px;
+    cursor: pointer;
+
+    &.open {
+        background: url(../images/arrow-open.png) no-repeat; 
+    }
+}
+
+.left_ul li ol {
+    display: none;
+    position: relative;
+    z-index: 100;
+}
+
+.left_ul li {
+    position: relative;
+    z-index: 10;
+    background: #f0f0f0;
+}
 // ----------------------------------------
 // ! file select
 // ----------------------------------------
@@ -1000,7 +1025,15 @@ body#index-body div.con {
 .loan-item h2 {
     color: white;
     width: 100%;
+    opacity: 0.7;
+    filter: alpha(opacity=70);
 }
+
+.loan-item:hover h2 {
+  opacity: 1;
+  filter: alpha(opacity=100); 
+}
+
 .bg-blue {
     background: #81b0c5;
 }
@@ -1038,7 +1071,7 @@ body#index-body div.con {
 }
 .sxdl2 dd a.on { background-color: #21aeef; }
 .query_qzsj i { background: url(../images/calendar.png) no-repeat; }
-.left_ul li i { background: url(../images/r-arrow.png) no-repeat; }
+//.left_ul li i { background: url(../images/r-arrow.png) no-repeat; }
 .i_sf { background: url(../images/namecard.png) no-repeat; }
 .jindu2 span { background-color: #55c31f; }
 .right_con h4 { color: #ffb900; }
@@ -1096,6 +1129,10 @@ body#index-body div.con {
     padding-bottom: 50px;
 }
 
+.loan-table-3 tr:nth-child(odd) {
+  background: #dbffd8;
+}
+.borb { padding-bottom: 6px; }
 
 
 
