--- a/css/style.less
+++ b/css/style.less
@@ -232,6 +232,28 @@ input[type="submit"].btn, input[type="button"].btn {
 }
 
 
+/* index */
+@dt: 80px;
+.tongji {
+    dt,dd {
+        float: left;
+    }
+
+    dt {
+        width: @dt;
+        height: @dt*1.5;
+    }
+
+    dd {
+        width: 275px - @dt - 20px;
+        padding-left: 20px;
+    }
+
+    .tj_tzje, .tj_zqsy {
+        background-position: 0 15px;
+    }
+}
+
 /* 星标 */
 .rank {
     position: relative;
